Adjusted data for new database structure (M6 - Connection to the grid data for different target countries solarec-db#6)
Related to #25